...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:text="@string/left_view_caption"
            android:textColor="@color/green"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbright"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/right_view_selector"
            android:button="@android:color/transparent"
            android:checked="true"
...
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Switch
        android:id="@+id/add_location"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:text="@string/map_switch_caption"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
...
